@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,7 +31,6 @@ import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Locale;
@@ -44,11 +43,6 @@ import jdk.javadoc.internal.doclets.toolkit.util.DocPaths;
  * An HTML {@code <head>} element.
  *
  * Many methods return the current object, to facilitate fluent builder-style usage.
- *
- *  <p><b>This is NOT part of any supported API.
- *  If you write code that depends on this, you do so at your own risk.
- *  This code and its internal interfaces are subject to change or
- *  deletion without notice.</b>
  */
 public class Head extends Content {
     private final Runtime.Version docletVersion;
@@ -61,12 +55,12 @@ public class Head extends Content {
     private String generator;
     private boolean showTimestamp;
     private DocPath mainStylesheet;
-    private List<DocPath> additionalStylesheets = Collections.emptyList();
+    private List<DocPath> additionalStylesheets = List.of();
     private boolean index;
     private Script mainBodyScript;
     private final List<Script> scripts;
     // Scripts added via --add-script option
-    private List<DocPath> additionalScripts = Collections.emptyList();
+    private List<DocPath> additionalScripts = List.of();
     private final List<Content> extraContent;
     private boolean addDefaultScript = true;
     private DocPath canonicalLink;
@@ -270,45 +264,45 @@ public class Head extends Content {
      * @return the HTML
      */
     private Content toContent() {
-        HtmlTree tree = new HtmlTree(TagName.HEAD);
-        tree.add(getGeneratedBy(showTimestamp, generatedDate));
-        tree.add(HtmlTree.TITLE(title));
+        var head = new HtmlTree(TagName.HEAD);
+        head.add(getGeneratedBy(showTimestamp, generatedDate));
+        head.add(HtmlTree.TITLE(title));
 
-        tree.add(HtmlTree.META("viewport", "width=device-width, initial-scale=1"));
+        head.add(HtmlTree.META("viewport", "width=device-width, initial-scale=1"));
 
         if (charset != null) { // compatibility; should this be allowed?
-            tree.add(HtmlTree.META("Content-Type", "text/html", charset));
+            head.add(HtmlTree.META("Content-Type", "text/html", charset));
         }
 
         if (showTimestamp) {
             DateTimeFormatter dateFormat = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-            tree.add(HtmlTree.META("dc.created", generatedDate.format(dateFormat)));
+            head.add(HtmlTree.META("dc.created", generatedDate.format(dateFormat)));
         }
 
         if (description != null) {
-            tree.add(HtmlTree.META("description", description));
+            head.add(HtmlTree.META("description", description));
         }
 
         if (generator != null) {
-            tree.add(HtmlTree.META("generator", generator));
+            head.add(HtmlTree.META("generator", generator));
         }
 
         for (String k : keywords) {
-            tree.add(HtmlTree.META("keywords", k));
+            head.add(HtmlTree.META("keywords", k));
         }
 
         if (canonicalLink != null) {
-            HtmlTree link = new HtmlTree(TagName.LINK);
+            var link = new HtmlTree(TagName.LINK);
             link.put(HtmlAttr.REL, "canonical");
             link.put(HtmlAttr.HREF, canonicalLink.getPath());
-            tree.add(link);
+            head.add(link);
         }
 
-        addStylesheets(tree);
-        addScripts(tree);
-        extraContent.forEach(tree::add);
+        addStylesheets(head);
+        addScripts(head);
+        extraContent.forEach(head::add);
 
-        return tree;
+        return head;
     }
 
 
@@ -323,31 +317,31 @@ public class Head extends Content {
         return new Comment(text);
     }
 
-    private void addStylesheets(HtmlTree tree) {
+    private void addStylesheets(HtmlTree head) {
         if (mainStylesheet == null) {
             mainStylesheet = DocPaths.STYLESHEET;
         }
-        addStylesheet(tree, mainStylesheet);
+        addStylesheet(head, mainStylesheet);
 
         for (DocPath path : additionalStylesheets) {
-            addStylesheet(tree, path);
+            addStylesheet(head, path);
         }
 
         if (index) {
             // The order of the addStylesheet(...) calls is important
-            addStylesheet(tree, DocPaths.SCRIPT_DIR.resolve(DocPaths.JQUERY_UI_CSS));
-            addStylesheet(tree, DocPaths.JQUERY_OVERRIDES_CSS);
+            addStylesheet(head, DocPaths.SCRIPT_DIR.resolve(DocPaths.JQUERY_UI_CSS));
+            addStylesheet(head, DocPaths.JQUERY_OVERRIDES_CSS);
         }
     }
 
-    private void addStylesheet(HtmlTree tree, DocPath stylesheet) {
-        tree.add(HtmlTree.LINK("stylesheet", "text/css",
+    private void addStylesheet(HtmlTree head, DocPath stylesheet) {
+        head.add(HtmlTree.LINK("stylesheet", "text/css",
                 pathToRoot.resolve(stylesheet).getPath(), "Style"));
     }
 
-    private void addScripts(HtmlTree tree) {
+    private void addScripts(HtmlTree head) {
         if (addDefaultScript) {
-            tree.add(HtmlTree.SCRIPT(pathToRoot.resolve(DocPaths.JAVASCRIPT).getPath()));
+            head.add(HtmlTree.SCRIPT(pathToRoot.resolve(DocPaths.JAVASCRIPT).getPath()));
         }
         if (index) {
             if (pathToRoot != null && mainBodyScript != null) {
@@ -357,19 +351,19 @@ public class Head extends Content {
                         .append(";\n")
                         .append("loadScripts(document, 'script');");
             }
-            addScriptElement(tree, DocPaths.JQUERY_JS);
-            addScriptElement(tree, DocPaths.JQUERY_UI_JS);
+            addScriptElement(head, DocPaths.JQUERY_JS);
+            addScriptElement(head, DocPaths.JQUERY_UI_JS);
         }
         for (DocPath path : additionalScripts) {
-            addScriptElement(tree, path);
+            addScriptElement(head, path);
         }
         for (Script script : scripts) {
-            tree.add(script.asContent());
+            head.add(script.asContent());
         }
     }
 
-    private void addScriptElement(HtmlTree tree, DocPath filePath) {
+    private void addScriptElement(HtmlTree head, DocPath filePath) {
         DocPath scriptFile = pathToRoot.resolve(DocPaths.SCRIPT_DIR).resolve(filePath);
-        tree.add(HtmlTree.SCRIPT(scriptFile.getPath()));
+        head.add(HtmlTree.SCRIPT(scriptFile.getPath()));
     }
 }
