@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,7 +31,7 @@ import java.util.*;
 
 public class ExtensionsTest {
     public static void main(String[] args) {
-        Locale jaJPJP = new Locale("ja", "JP", "JP");
+        Locale jaJPJP = Locale.of("ja", "JP", "JP");
         if (!jaJPJP.hasExtensions()) {
             error(jaJPJP + " should have an extension.");
         }
